--- a/nouri/config/settings_data.json
+++ b/nouri/config/settings_data.json
@@ -272,10 +272,10 @@
           "show_modal": false,
           "icon_text": "#3d6252",
           "narrow_icons": false,
-          "icon_top_margin": "xlarge",
           "top_line": true,
-          "bottom_margin": true,
           "icon_size": "small",
+          "icon_top_margin": "xlarge",
+          "icon_bottom_margin": "large",
           "cta_text_heading": "",
           "product_carousel_full_width": true,
           "show_img_with_text": false,
@@ -304,7 +304,7 @@
             "type": "image",
             "settings": {
               "image": "shopify:\/\/shop_images\/bottles_boxes_colored_2048px_9234041a-52d1-4d6b-8360-1ceafd82671d.jpg",
-              "mobile_image": "shopify:\/\/shop_images\/bottles_boxes_colored_2048px_9234041a-52d1-4d6b-8360-1ceafd82671d.jpg",
+              "mobile_image": "shopify:\/\/shop_images\/bottles_boxes_colored_bk.jpg",
               "alignment": "center center",
               "title": "It takes guts<br>\nto feel good.",
               "subtitle": "Say hello to your solution<br> for good gut health.",
@@ -323,7 +323,7 @@
           "show_overlay": false,
           "show_overlay_image": true,
           "overlay_color": "rgba(0,0,0,0)",
-          "overlay_text": "#454545",
+          "overlay_text": "#ffffff",
           "overlay_opacity": 0
         }
       },
@@ -443,9 +443,10 @@
           "section_move_up": "0",
           "thin_section": false,
           "no_l_r_padding": false,
-          "select_top_margin": "none",
-          "select_top_padding": "none",
-          "bottom_margin": false,
+          "custom_top_margin": "medium",
+          "custom_content_bottom_margin": "medium",
+          "custom_top_padding": "medium",
+          "custom_bottom_padding": "medium",
           "flip_for_mobile": false
         }
       },
@@ -940,6 +941,7 @@
               "heading_color": "#3a3a3a",
               "heading_style": "h3",
               "simple_heading_text": "",
+              "simple_heading_size": "",
               "paragraph_text": "<p>To be seen was the chase. Running as quickly as my feet could take me,&nbsp; jump-starting a professional career at the age of 18 by dropping out of college to work for a successful health startup. This was the beginning of five years working an unmentionable amount of hours around the country each week.<\/p>",
               "paragraph_color": "#4a4a4a",
               "paragraph_size": "1",
@@ -980,6 +982,7 @@
               "heading_color": "#3a3a3a",
               "heading_style": "h3",
               "simple_heading_text": "",
+              "simple_heading_size": "",
               "paragraph_text": "<p>To be seen was the chase. Running as quickly as my feet could take me,&nbsp;&nbsp;jump-starting a professional career at the age of 18 by dropping out of college to work for a successful health startup. This was the beginning of five years working an unmentionable amount of hours around the country each week.<\/p>\n<p>Seen feels great for so many reasons. It is tangible, publically celebrated, and initially satisfying. But what I learned was that the chase to be seen is so often a cover and it leaves what is most important unseen. My work life became quickly overshadowed by a shift in energy, mood, and focus. At the age of 21, my adrenals were failing. Essentially, I had &ldquo;burned out&rdquo; before I reached 22 years old. The most shocking thing was that I had trouble seeing what was right in front of me altogether.&nbsp;<br><br>My mind raced between the depression of my invisible past and the anxiety of my invisible future. What had gone unseen below the surface of my career in &ldquo;health and wellness&rdquo; was the invisible battle inside of my body. The five and a half invisible inches stretching from my left ear to my right ear were battling to find practical and needed my help. I learned that the foundation from which my visible, healthy lifestyle was built on was crumbling. Research led me to understand that the invisible inside of me needed to be built before any health product would be effective. Protecting and infusing more life inside my body led to an increase in what is outwardly seen.&nbsp;<br><br>I quickly learned my choices do not live in isolation from one another. The visible today will determine the invisible tomorrow. Nutritionally, the same is very true. By taking proactive versus reactive approaches to health, I believe we can reduce the symptoms of diseases that steal our loved ones each day.&nbsp;<br><br>Very quickly it became impossible for me not to work on solving this problem. Cultural headlines of loss after loss remind me daily of how hard we are battling inside our minds and our bodies. How hard we are battling in the inside. In the spirit and desire to increase life, I am excited to introduce Nouri. A company focused on creating visible solutions today for the invisible tomorrow. Much more than introducing products alone, I believe Nouri will introduce a life giving conversation. Join us as we develop, create and share solutions to increase lives around the world.&nbsp;<br><br><strong>Caroline H. Beckman<\/strong><br>Founder &amp; CEO<\/p>",
               "paragraph_color": "#4a4a4a",
               "paragraph_size": "1",
@@ -1034,9 +1037,10 @@
           "section_move_up": "0",
           "thin_section": false,
           "no_l_r_padding": true,
-          "select_top_margin": "small",
-          "select_top_padding": "medium",
-          "bottom_margin": false,
+          "custom_top_margin": "medium",
+          "custom_content_bottom_margin": "medium",
+          "custom_top_padding": "medium",
+          "custom_bottom_padding": "medium",
           "flip_for_mobile": false
         }
       },
@@ -1051,8 +1055,9 @@
               "heading_full_width_style": "h3",
               "header_text_content_inner_padding": "none",
               "heading_color": "#000000",
-              "heading_style": "h4",
-              "simple_heading_text": "<p>Not your solution?<br>It&rsquo;s on us.<\/p>\n<p>Free shipping.<\/p>\n<p>Manage your subscription, with ease. <\/p>\n<p>Cancel anytime.<\/p>",
+              "heading_style": "p",
+              "simple_heading_text": "<p>Not your solution?<br>It&rsquo;s on us.<\/p>\n<p>Free shipping.<\/p>\n<p>Manage your subscription, with ease.<\/p>\n<p>Cancel anytime.<\/p>",
+              "simple_heading_size": "25px",
               "paragraph_text": "",
               "paragraph_color": "#000000",
               "paragraph_size": "1",
@@ -1100,9 +1105,10 @@
           "section_move_up": "0",
           "thin_section": true,
           "no_l_r_padding": false,
-          "select_top_margin": "none",
-          "select_top_padding": "small",
-          "bottom_margin": false,
+          "custom_top_margin": "medium",
+          "custom_content_bottom_margin": "medium",
+          "custom_top_padding": "medium",
+          "custom_bottom_padding": "medium",
           "flip_for_mobile": true
         }
       },
@@ -1147,6 +1153,7 @@
               "heading_color": "#454545",
               "heading_style": "h5",
               "simple_heading_text": "<p>Wondering which product is right for you?<\/p>",
+              "simple_heading_size": "",
               "paragraph_text": "",
               "paragraph_color": "#ffffff",
               "paragraph_size": "1.5",
@@ -1180,9 +1187,10 @@
           "section_move_up": "0",
           "thin_section": false,
           "no_l_r_padding": false,
-          "select_top_margin": "none",
-          "select_top_padding": "small",
-          "bottom_margin": true,
+          "custom_top_margin": "medium",
+          "custom_content_bottom_margin": "medium",
+          "custom_top_padding": "medium",
+          "custom_bottom_padding": "medium",
           "flip_for_mobile": false
         }
       },
@@ -1220,6 +1228,7 @@
               "heading_color": "#3a3a3a",
               "heading_style": "h1",
               "simple_heading_text": "",
+              "simple_heading_size": "",
               "paragraph_text": "<p>Your gut houses 70% of your immune system, acting as the first line of defense against harmful toxins and foreign invaders.<\/p>",
               "paragraph_color": "#4a4a4a",
               "paragraph_size": "1.25",
@@ -1247,6 +1256,7 @@
               "heading_color": "#3a3a3a",
               "heading_style": "h3",
               "simple_heading_text": "",
+              "simple_heading_size": "",
               "paragraph_text": "<p>How you&rsquo;re feeling has a lot to do with what&rsquo;s happening in your gut, because 90% of the body&rsquo;s serotonin (the feel-good chemical in your body) is produced in the gut.&nbsp;<\/p>",
               "paragraph_color": "#4a4a4a",
               "paragraph_size": "1",
@@ -1274,6 +1284,7 @@
               "heading_color": "#3a3a3a",
               "heading_style": "h3",
               "simple_heading_text": "",
+              "simple_heading_size": "",
               "paragraph_text": "<p>With the help of 100 million nerve cells, your gut is intricately connected to your brain, so much that they have their own communication highway.<\/p>",
               "paragraph_color": "#4a4a4a",
               "paragraph_size": "1",
@@ -1309,9 +1320,10 @@
           "section_move_up": "0",
           "thin_section": false,
           "no_l_r_padding": false,
-          "select_top_margin": "small",
-          "select_top_padding": "small",
-          "bottom_margin": true,
+          "custom_top_margin": "xlarge",
+          "custom_content_bottom_margin": "xlarge",
+          "custom_top_padding": "xlarge",
+          "custom_bottom_padding": "xlarge",
           "flip_for_mobile": false
         }
       },
@@ -1397,9 +1409,10 @@
           "section_move_up": "0",
           "thin_section": false,
           "no_l_r_padding": false,
-          "select_top_margin": "none",
-          "select_top_padding": "small",
-          "bottom_margin": false,
+          "custom_top_margin": "medium",
+          "custom_content_bottom_margin": "medium",
+          "custom_top_padding": "medium",
+          "custom_bottom_padding": "medium",
           "flip_for_mobile": false
         }
       },
@@ -1429,9 +1442,10 @@
           "section_move_up": "0",
           "thin_section": false,
           "no_l_r_padding": false,
-          "select_top_margin": "none",
-          "select_top_padding": "none",
-          "bottom_margin": true,
+          "custom_top_margin": "medium",
+          "custom_content_bottom_margin": "medium",
+          "custom_top_padding": "medium",
+          "custom_bottom_padding": "medium",
           "flip_for_mobile": false
         }
       },
@@ -1461,9 +1475,10 @@
           "section_move_up": "0",
           "thin_section": false,
           "no_l_r_padding": false,
-          "select_top_margin": "none",
-          "select_top_padding": "none",
-          "bottom_margin": false,
+          "custom_top_margin": "small",
+          "custom_content_bottom_margin": "large",
+          "custom_top_padding": "xlarge",
+          "custom_bottom_padding": "small",
           "flip_for_mobile": false
         }
       }
